--- a/index.html
+++ b/index.html
@@ -4,5 +4,5 @@
 <p>I am a senior computer science student at Oregon Sate University working towards a bachelors degree in Artificial Intelligence</p>
 
 <h3>Portfolio</h3>
-<h4>[Small Shell](https://github.com/hchrist2010/SmallShell)</h4>
+<h4><a href=https://github.com/hchrist2010/SmallShell>Small Shell</a></h4>
 <p>Small Shell is a simplified shell written in C. The shell functionally is very similar to bash, it allows for file navigtation as well as the execution of simple commands such as "cat" and "ls". The user can also launch programs from the shell and can run anything either in the forground or the background.
