--- a/index.html
+++ b/index.html
@@ -1,19 +1,22 @@
-  <h1> Hunter Christiansen</h1>
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <link rel="stylesheet" href="style.css">
+    </head?
+    <body>
+<h1> Hunter Christiansen</h1>
   <h3>About</h3>
     <p>I am a senior computer science student at Oregon State University working towards a bachelor's degree in Artificial Intelligence</p>
-
   <h3>Portfolio</h3>
-  <h4><a href=https://github.com/hchrist2010/ModularEncryptionDaemon>Modular Encryption Daemon</a></h4>
-  <p>The Modular Encryption Daemon contains three programs. A keygen, an encryption and a decryption program.
-    These programs are not actually Daemons but function very similarly to one.
-    The keygen will create a string of capital letters and spaces of a length defined by the user.
-    otp_enc_d is the decryption daemon. When starting this program, the user will define a listening port and run it in the background.
-    When the user wishes to encrypt a file, the user calls this program and passes in the file to be encrypted, the key, and the port assigned to otp_enc followed by a redirect to the file destination.
-    opt_dec_d works the same as opt_enc_d, it is a process run in the background that can decrypt a file that was previously encrypted by otp_enc_d using the same keygen.
-    The encryption and decryption programs are capable of running 5 processes simultaneously.
-  </p>
-
+    <h4><a href=https://github.com/hchrist2010/ModularEncryptionDaemon>Modular Encryption Daemon</a></h4>
+    <p>The Modular Encryption Daemon contains three programs. A keygen, an encryption and a decryption program.
+      These programs are not actually Daemons but function very similarly to one.
+      The keygen will create a string of capital letters and spaces of a length defined by the user.
+      otp_enc_d is the decryption daemon. When starting this program, the user will define a listening port and run it in the background.
+      When the user wishes to encrypt a file, the user calls this program and passes in the file to be encrypted, the key, and the port assigned to otp_enc followed by a redirect to the file destination.
+      opt_dec_d works the same as opt_enc_d, it is a process run in the background that can decrypt a file that was previously encrypted by otp_enc_d using the same keygen.
+      The encryption and decryption programs are capable of running 5 processes simultaneously.
+    </p>
     <h4><a href=https://github.com/hchrist2010/SmallShell>Small Shell</a></h4>
       <p>Small Shell is a simplified shell written in C. The shell functionally is very similar to bash,
         it allows for file navigation as well as the execution of simple commands such as "cat", "ls", and "echo".
@@ -28,7 +31,6 @@
        If the user selects an individual post, they are taken to a page that will display the photo of the waste, the date it was created, the amount,
        and the GPS location of the user when they created the post. This application was created using the Flutter SDK and utilizes the firebase cloud server for persistent storage.
     </p>
-
     <h4><a href=https://github.com/hchrist2010/CustomFlutterGeofencing>CustomFlutterGeofencing</a></h4>
     <p>
       This mobile application was created for my senior capstone project to explore the location and geofencing capabilities of the <a href =https://pub.dev/packages/location>Location</a> package for
@@ -43,3 +45,5 @@
       Currently, this portion of the application is set up to use some test data I created so I didn't have to walk around whenever I wanted to test the application, but it can be easily modified
       to use the location stream and custom objects created by the user.
     </p>
+    </body>
+</html>
